Bug 143398 - When I click to add a single sheet. It makes automatically two sheets.
Summary: When I click to add a single sheet. It makes automatically two sheets.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.1 rc
Hardware: All Windows (All)
: highest major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-07-16 04:32 UTC by TseRigs
Modified: 2021-07-21 09:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description TseRigs 2021-07-16 04:32:40 UTC
Description:
Here I got a problem with Calc. When I click to add a single sheet. It makes automatically two sheets. 

Version: 7.2.0.1 (x64) / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 4; OS: Windows 6.2 Service Pack 1 Build 9200; UI render: Skia/Raster; VCL: win
Locale: en-IN (en_IN); UI: en-US
Calc: threaded

Steps to Reproduce:
1.Sigle clicked on Plus Button to add a new single sheet. 
2.
3.

Actual Results:
It creates a double sheet automatically

Expected Results:
Create a single sheet.


Reproducible: Always


User Profile Reset: No



Additional Info:
This mentioned problem needs to be fixed.
Comment 1 Rizal Muttaqin 2021-07-16 04:39:18 UTC
Not reproducible in:

Version: 7.1.4.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: kf5
Locale: id-ID (id_ID.UTF-8); UI: id-ID
Ubuntu package version: 1:7.1.4~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded

Reproducible in:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 0ce3a9dcc071094121252a286aa88529ee09a4eb
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: id-ID (id_ID.UTF-8); UI: id-ID
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-15_08:59:24
Calc: threaded
Comment 2 Heiko Tietze 2021-07-16 06:18:14 UTC
Confirming. Sheets are added while the mouse button is down, perhaps that's why it looks like two. I see a difference between gtk3, where it takes a while, and gen/kf5 that immediately two sheets.

IMHO required to fix for 7.2 => highest.
Comment 3 TseRigs 2021-07-16 06:46:17 UTC
SAME BUG PROBLEM WITH MAC OS VERSION

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 8; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 4 BogdanB 2021-07-16 06:53:09 UTC
Reproductibile with
Version: 7.2.0.1.0+ (x64) / LibreOffice Community
Build ID: ffeeb78118a887419c5f33bb5311f0e2ddae463c
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded
Comment 5 Caolán McNamara 2021-07-16 09:36:13 UTC
I bet this is a problem since

commit 67b157e994d9bef01f6117b53fc29e1fee538715
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 29 13:00:45 2021 +0100

    tdf#143088 multiple Application::EventListeners is expensive
Comment 6 Caolán McNamara 2021-07-16 09:48:28 UTC
https://gerrit.libreoffice.org/c/core/+/119019
Comment 7 Commit Notification 2021-07-16 10:53:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cf480f81cb68de1f4cc9877c11b56bd5d4802a77

Resolves: tdf#143398 mouse event processed twice

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-07-16 15:06:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/52f7bed66abed69ba30a9f699aca435fe3e54f9f

Resolves: tdf#143398 mouse event processed twice

It will be available in 7.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 BogdanB 2021-07-21 09:24:16 UTC
It's ok now. Thanks for fixing this.

Version: 7.2.0.1.0+ (x64) / LibreOffice Community
Build ID: a4360b155bef02cf3da41e3f05c56d42feef7926
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded