Resolves: tdf#143398 mouse event processed twice

this is a problem since:

commit 67b157e994d9bef01f6117b53fc29e1fee538715
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 29 13:00:45 2021 +0100

    tdf#143088 multiple Application::EventListeners is expensive

turns out that AddChildEventListener is sufficient to get events
for the widget and its children so the widget-only AddEventListener
isn't needed or wanted

Change-Id: I635419df10fce1d4441b2d85627a6cbe99adb6aa